SERVER-59585 Fix invalid cast on config servers

ReshardingOpObserver is enabled on both --configsvrs and --shardsvrs.
However, config servers use CollectionShardingStateStandalone rather
than CollectionShardingRuntime and means calling
CollectionShardingRuntime::get() on a config server is incorrect.
Instead, use CollectionShardingState::get() to retrieve the information
without a cast.

Also, update test_resharding_test_fixture_detects_unowned_docs.js to
specify a shard version when performing its insert so that the
collection is considered to be sharded by the ReshardingOpObserver when
using the CollectionShardingState interface.