jstests/sharding/test_resharding_test_fixture_detects_unowned_docs.js
@@ -12,6 +12,7 @@
 
 load('jstests/libs/discover_topology.js');
 load("jstests/sharding/libs/resharding_test_fixture.js");
+load('jstests/sharding/libs/shard_versioning_util.js');
 
 // The test purposely emplaces documents on a shard that doesn't own them.
 TestData.skipCheckOrphans = true;
@@ -59,8 +60,10 @@ const err = assert.throws(() => {
 
             // Insert a document directly into recipient0 that is truly owned by recipient1.
             const tempColl = recipient0.getCollection(tempNs);
-            assert.commandWorked(
-                tempColl.insert({_id: "unowned by recipient0", oldKey: 10, newKey: 10}));
+            assert.commandWorked(tempColl.runCommand("insert", {
+                documents: [{_id: "unowned by recipient0", oldKey: 10, newKey: 10}],
+                shardVersion: ShardVersioningUtil.kIgnoredShardVersion
+            }));
         });
 });
 
